@@ -24,8 +24,6 @@
  */
 package net.runelite.client.plugins.microbot.questhelper.helpers.skills.agility;
 
-
-import net.runelite.api.ItemID;
 import net.runelite.client.plugins.microbot.questhelper.collections.ItemCollections;
 import net.runelite.client.plugins.microbot.questhelper.panel.PanelDetails;
 import net.runelite.client.plugins.microbot.questhelper.questhelpers.ComplexStateQuestHelper;
@@ -37,6 +35,7 @@ import net.runelite.client.plugins.microbot.questhelper.requirements.util.LogicT
 import net.runelite.client.plugins.microbot.questhelper.rewards.UnlockReward;
 import net.runelite.client.plugins.microbot.questhelper.steps.ConditionalStep;
 import net.runelite.client.plugins.microbot.questhelper.steps.QuestStep;
+import net.runelite.api.gameval.ItemID;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -44,165 +43,172 @@ import java.util.List;
 
 import static net.runelite.api.Skill.AGILITY;
 
-public class Agility extends ComplexStateQuestHelper {
-    // Items recommended
-    ItemRequirement bootsOfLightness, gracefulOutfit, gracefulHood, gracefulTop,
-            gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape;
+public class Agility extends ComplexStateQuestHelper
+{
+	// Items recommended
+	ItemRequirement bootsOfLightness, gracefulOutfit, gracefulHood, gracefulTop,
+		gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape;
 
-    SkillRequirement ag10, ag20, ag30, ag40, ag50, ag60, ag70, ag80, ag90;
+	SkillRequirement ag10, ag20, ag30, ag40, ag50, ag60, ag70, ag80, ag90;
 
-    SkillRequirement ag45;
+	SkillRequirement ag45;
 
-    AgilityCourse draynorVillage, alKharid, varrock, canifis,
-            falador, seersVillage, pollnivneach, rellekka, ardougne;
-    ConditionalStep draynorStep, alKharidStep, varrockStep, canifisStep,
-            faladorStep, seersStep, pollnivneachStep, rellekkaStep, ardougneStep;
+	AgilityCourse draynorVillage, alKharid, varrock, canifis,
+		falador, seersVillage, pollnivneach, rellekka, ardougne;
+	ConditionalStep draynorStep, alKharidStep, varrockStep, canifisStep,
+		faladorStep, seersStep, pollnivneachStep, rellekkaStep, ardougneStep;
 
-    @Override
-    public QuestStep loadStep() {
-        initializeRequirements();
+	@Override
+	public QuestStep loadStep()
+	{
+		initializeRequirements();
 
-        draynorStep = draynorVillage.loadStep();
-        alKharidStep = alKharid.loadStep();
-        varrockStep = varrock.loadStep();
-        canifisStep = canifis.loadStep();
-        faladorStep = falador.loadStep();
-        seersStep = seersVillage.loadStep();
-        pollnivneachStep = pollnivneach.loadStep();
-        rellekkaStep = rellekka.loadStep();
-        ardougneStep = ardougne.loadStep();
-
-
-        ConditionalStep superStep = new ConditionalStep(this, draynorStep);
-        superStep.addStep(ag90, ardougneStep);
-        superStep.addStep(ag80, rellekkaStep);
-        superStep.addStep(ag70, pollnivneachStep);
-        superStep.addStep(ag60, seersStep);
-        superStep.addStep(ag40, canifisStep);
-        superStep.addStep(ag50, faladorStep);
-        superStep.addStep(ag30, varrockStep);
-        superStep.addStep(ag20, alKharidStep);
-
-        return superStep;
-    }
-
-    @Override
-    protected void setupRequirements() {
-        //Setup courses
-        draynorVillage = new DraynorVillage(this);
-        alKharid = new AlKharid(this);
-        varrock = new Varrock(this);
-        canifis = new Canifis(this);
-        falador = new Falador(this);
-        seersVillage = new SeersVillage(this);
-        pollnivneach = new Pollnivneach(this);
-        rellekka = new Rellekka(this);
-        ardougne = new Ardougne(this);
-
-        //Setup skill requirements
-        ag10 = new SkillRequirement(AGILITY, 10);
-        ag20 = new SkillRequirement(AGILITY, 20);
-        ag30 = new SkillRequirement(AGILITY, 30);
-        ag40 = new SkillRequirement(AGILITY, 40);
-        ag45 = new SkillRequirement(AGILITY, 45);
-        ag50 = new SkillRequirement(AGILITY, 50);
-        ag60 = new SkillRequirement(AGILITY, 60);
-        ag70 = new SkillRequirement(AGILITY, 70);
-        ag80 = new SkillRequirement(AGILITY, 80);
-        ag90 = new SkillRequirement(AGILITY, 90);
-
-        //Setup item requirements
-        bootsOfLightness = new ItemRequirement(
-                "Boots of Lightness", ItemID.BOOTS_OF_LIGHTNESS).showConditioned(
-                new Conditions(LogicType.NOR, ag45)
-        ).isNotConsumed();
-
-        gracefulHood = new ItemRequirement(
-                "Graceful hood", ItemCollections.GRACEFUL_HOOD, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-
-        gracefulTop = new ItemRequirement(
-                "Graceful top", ItemCollections.GRACEFUL_TOP, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-
-        gracefulLegs = new ItemRequirement(
-                "Graceful legs", ItemCollections.GRACEFUL_LEGS, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-
-        gracefulCape = new ItemRequirement(
-                "Graceful cape", ItemCollections.GRACEFUL_CAPE, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-
-        gracefulGloves = new ItemRequirement(
-                "Graceful gloves", ItemCollections.GRACEFUL_GLOVES, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-
-        gracefulBoots = new ItemRequirement(
-                "Graceful boots", ItemCollections.GRACEFUL_BOOTS, 1, true).showConditioned(
-                new Conditions(ag45)
-        ).isNotConsumed();
-        gracefulBoots.addAlternates(ItemID.BOOTS_OF_LIGHTNESS);
-
-        gracefulOutfit = new ItemRequirements(
-                "Graceful outfit (equipped)",
-                gracefulHood, gracefulTop, gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape
-        ).isNotConsumed();
+		draynorStep = draynorVillage.loadStep();
+		alKharidStep = alKharid.loadStep();
+		varrockStep = varrock.loadStep();
+		canifisStep = canifis.loadStep();
+		faladorStep = falador.loadStep();
+		seersStep = seersVillage.loadStep();
+		pollnivneachStep = pollnivneach.loadStep();
+		rellekkaStep = rellekka.loadStep();
+		ardougneStep = ardougne.loadStep();
 
 
-        draynorVillage.setRecommended(bootsOfLightness);
-        alKharid.setRecommended(bootsOfLightness);
-        varrock.setRecommended(bootsOfLightness);
-        canifis.setRecommended(bootsOfLightness, gracefulOutfit);
-        falador.setRecommended(gracefulOutfit);
-        seersVillage.setRecommended(gracefulOutfit);
-        pollnivneach.setRecommended(gracefulOutfit);
-        rellekka.setRecommended(gracefulOutfit);
-        ardougne.setRecommended(gracefulOutfit);
-    }
+		ConditionalStep superStep = new ConditionalStep(this, draynorStep);
+		superStep.addStep(ag90, ardougneStep);
+		superStep.addStep(ag80, rellekkaStep);
+		superStep.addStep(ag70, pollnivneachStep);
+		superStep.addStep(ag60, seersStep);
+		superStep.addStep(ag40, canifisStep);
+		superStep.addStep(ag50, faladorStep);
+		superStep.addStep(ag30, varrockStep);
+		superStep.addStep(ag20, alKharidStep);
 
-    @Override
-    public List<UnlockReward> getUnlockRewards() {
-        return List.of(
-                new UnlockReward("Ability to purchase the Agility Cape for 99k"),
-                new UnlockReward("Ability to traverse various shortcuts throughout Gielinor"),
-                new UnlockReward("Increased run energy restoration")
-        );
-    }
+		return superStep;
+	}
 
-    @Override
-    public List<ItemRequirement> getItemRecommended() {
-        return Arrays.asList(
-                bootsOfLightness, gracefulHood, gracefulTop, gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape
-        );
-    }
+	@Override
+	protected void setupRequirements()
+	{
+		//Setup courses
+		draynorVillage = new DraynorVillage(this);
+		alKharid = new AlKharid(this);
+		varrock = new Varrock(this);
+		canifis = new Canifis(this);
+		falador = new Falador(this);
+		seersVillage = new SeersVillage(this);
+		pollnivneach = new Pollnivneach(this);
+		rellekka = new Rellekka(this);
+		ardougne = new Ardougne(this);
 
-    @Override
-    public List<PanelDetails> getPanels() {
-        List<PanelDetails> allSteps = new ArrayList<>();
+		//Setup skill requirements
+		ag10 = new SkillRequirement(AGILITY, 10);
+		ag20 = new SkillRequirement(AGILITY, 20);
+		ag30 = new SkillRequirement(AGILITY, 30);
+		ag40 = new SkillRequirement(AGILITY, 40);
+		ag45 = new SkillRequirement(AGILITY, 45);
+		ag50 = new SkillRequirement(AGILITY, 50);
+		ag60 = new SkillRequirement(AGILITY, 60);
+		ag70 = new SkillRequirement(AGILITY, 70);
+		ag80 = new SkillRequirement(AGILITY, 80);
+		ag90 = new SkillRequirement(AGILITY, 90);
 
-        allSteps.add(draynorVillage.getPanelDetails());
-        allSteps.add(alKharid.getPanelDetails());
-        allSteps.add(varrock.getPanelDetails());
-        allSteps.add(canifis.getPanelDetails());
-        allSteps.add(falador.getPanelDetails());
-        allSteps.add(seersVillage.getPanelDetails());
-        allSteps.add(pollnivneach.getPanelDetails());
-        allSteps.add(rellekka.getPanelDetails());
-        allSteps.add(ardougne.getPanelDetails());
+		//Setup item requirements
+		bootsOfLightness = new ItemRequirement(
+			"Boots of Lightness", ItemID.IKOV_BOOTSOFLIGHTNESS).showConditioned(
+			new Conditions(LogicType.NOR, ag45)
+		).isNotConsumed();
+
+		gracefulHood = new ItemRequirement(
+			"Graceful hood", ItemCollections.GRACEFUL_HOOD, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+
+		gracefulTop = new ItemRequirement(
+			"Graceful top", ItemCollections.GRACEFUL_TOP, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+
+		gracefulLegs = new ItemRequirement(
+			"Graceful legs", ItemCollections.GRACEFUL_LEGS, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+
+		gracefulCape = new ItemRequirement(
+			"Graceful cape", ItemCollections.GRACEFUL_CAPE, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+
+		gracefulGloves = new ItemRequirement(
+			"Graceful gloves", ItemCollections.GRACEFUL_GLOVES, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+
+		gracefulBoots = new ItemRequirement(
+			"Graceful boots", ItemCollections.GRACEFUL_BOOTS, 1, true).showConditioned(
+			new Conditions(ag45)
+		).isNotConsumed();
+		gracefulBoots.addAlternates(ItemID.IKOV_BOOTSOFLIGHTNESS);
+
+		gracefulOutfit = new ItemRequirements(
+			"Graceful outfit (equipped)",
+			gracefulHood, gracefulTop, gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape
+		).isNotConsumed();
 
 
-        return allSteps;
-    }
+		draynorVillage.setRecommended(bootsOfLightness);
+		alKharid.setRecommended(bootsOfLightness);
+		varrock.setRecommended(bootsOfLightness);
+		canifis.setRecommended(bootsOfLightness, gracefulOutfit);
+		falador.setRecommended(gracefulOutfit);
+		seersVillage.setRecommended(gracefulOutfit);
+		pollnivneach.setRecommended(gracefulOutfit);
+		rellekka.setRecommended(gracefulOutfit);
+		ardougne.setRecommended(gracefulOutfit);
+	}
 
-    @Override
-    public List<String> getNotes() {
-        return Arrays.asList("40-60 Agility: Stay on Canifis Rooftop Course for best spawn of Mark of Grace" +
-                        " until 60 Agility, then go directly to Seer's Village\n\n",
-                "70-90 Agility: If you haven't done the Fremennik Hard Diary, the Pollnivneach course is better exp/hour than the Rellekka one.");
-    }
+	@Override
+	public List<UnlockReward> getUnlockRewards()
+	{
+		return List.of(
+			new UnlockReward("Ability to purchase the Agility Cape for 99k"),
+			new UnlockReward("Ability to traverse various shortcuts throughout Gielinor"),
+			new UnlockReward("Increased run energy restoration")
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRecommended()
+	{
+		return Arrays.asList(
+			bootsOfLightness, gracefulHood, gracefulTop, gracefulLegs, gracefulGloves, gracefulBoots, gracefulCape
+		);
+	}
+
+	@Override
+	public List<PanelDetails> getPanels()
+	{
+		List<PanelDetails> allSteps = new ArrayList<>();
+
+		allSteps.add(draynorVillage.getPanelDetails());
+		allSteps.add(alKharid.getPanelDetails());
+		allSteps.add(varrock.getPanelDetails());
+		allSteps.add(canifis.getPanelDetails());
+		allSteps.add(falador.getPanelDetails());
+		allSteps.add(seersVillage.getPanelDetails());
+		allSteps.add(pollnivneach.getPanelDetails());
+		allSteps.add(rellekka.getPanelDetails());
+		allSteps.add(ardougne.getPanelDetails());
+
+
+		return allSteps;
+	}
+
+	@Override
+	public List<String> getNotes()
+	{
+		return Arrays.asList("40-60 Agility: Stay on Canifis Rooftop Course for best spawn of Mark of Grace" +
+				" until 60 Agility, then go directly to Seer's Village\n\n",
+			"70-90 Agility: If you haven't done the Fremennik Hard Diary, the Pollnivneach course is better exp/hour than the Rellekka one.");
+	}
 }
